MAN-1312 css fix for overlapping links in summary list

--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -448,7 +448,7 @@ body.feature-disabled {
 }
 
 .govuk-summary-list__actions .govuk-link {
-  white-space: nowrap;
+  white-space: normal;
 }
 
 .govuk-summary-list__hint {
